AC_INIT([reactor-couch], 0.1.0, [fredrik.widlund@gmail.com], [reactor-http])
AC_CONFIG_AUX_DIR([autotools])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.12 subdir-objects -Wall -Werror no-define])

: ${CFLAGS="-g -O3 -Wall -Wextra -Wpedantic -std=gnu11 -flto -ffat-lto-objects"}

AC_PROG_CC
AM_PROG_AR
AC_PROG_LIBTOOL

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
